tests/integration/errors/undefined_variable.rsg
// TEST: compile_error
// EXPECT-ERROR: undefined variable 'x'
module test_err

fn main() {
    y := x + 1
}
